Info/Kubernetes/Kubernetes/Security/network-policy2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
    - Ingress

  ingress:
    - from:
      - podSelector:
          matchLabels:
            name: api-pod
        namespaceSelector:
          matchLabels:
            name: prod
      - ipBlock: #### OR
        cidr: 192.168.0.120/32
      ports:
        - protocol: TCP
          port: 3306

  egress:
    - to:
      - ipBlock:
          cidr: 192.168.0.120/32
      
      ports: 
        - protocol: TCP
          port: 80



# kubectl create -f network-policy.yaml
# kubectl get networkpolicy
